overflow x bug

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   touch-action: manipulation;
 }
 ul {
